<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="18sp"
    android:paddingRight="18sp"
    tools:context=".SelectTeamActivity">

    <TextView
        android:id="@+id/teamSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:textSize="30dp"
        android:text="@string/team_selection_text" />

    <TextView
        android:id="@+id/myTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teamSelection"
        android:layout_alignParentLeft="true"
        android:textSize="20dp"
        android:text="@string/my_team" />

    <TextView
        android:id="@+id/opposingTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teamSelection"
        android:layout_alignParentRight="true"
        android:textSize="20dp"
        android:text="@string/opposing_team" />

    <Button
        android:id="@+id/myPlayer"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/opposingPlayer"
        android:translationY="25sp"
        android:background="@drawable/circle"
        android:text="@string/my_player" />

    <Button
        android:id="@+id/otherTeamMember"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/opposingPlayer"
        android:translationY="-25sp"
        android:background="@drawable/circle"
        android:text="@string/other_team" />

    <Button
        android:id="@+id/opposingPlayer"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/circle_red"
        android:text="@string/opposing_player" />

</RelativeLayout>