<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SelectScoreActivity"
    android:weightSum="3">

    <Button
        android:id="@+id/three_point_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:layout_gravity="fill_vertical"
        android:gravity="center"
        android:textSize="30sp"
        android:background="@drawable/button_main"
        android:textColor="#ffffff"
        android:text="@string/three_point" />

    <Button
        android:id="@+id/two_point_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:layout_gravity="fill_vertical"
        android:gravity="center"
        android:textSize="30sp"
        android:background="@drawable/button_main"
        android:textColor="#ffffff"
        android:text="@string/two_point" />

    <Button
        android:id="@+id/one_point_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="fill_vertical"
        android:gravity="center"
        android:textSize="30sp"
        android:background="@drawable/button_main"
        android:textColor="#ffffff"
        android:text="@string/one_point" />

<<<<<<< HEAD
</LinearLayout>
=======
    <Button
        android:id="@+id/three_point_button"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_below="@+id/one_point_button"
        android:layout_centerHorizontal="true"
        android:layout_margin="9dp"
        android:textSize="30sp"
        android:background="@drawable/circle"
        android:text="@string/three_point" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="Cancel" />

</RelativeLayout>
>>>>>>> ff94c339bd7115b2d9fde5d1f6a80e294e4109bc
