<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    android:paddingTop="5dp"
    android:textColor="#333333" >

    <TextView
        android:id="@+id/quarterNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/scoreImageView"
        android:layout_marginTop="10dp"
        android:textSize="24dp"
        android:text="Q1"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/quarterOneButton"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_below="@+id/quarterNumber"
        android:layout_toLeftOf="@+id/quarterTwoButton"
        android:background="@android:color/transparent"
        android:src="@drawable/quarter_round"/>

    <ImageView
        android:id="@+id/quarterTwoButton"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_below="@+id/quarterNumber"
        android:layout_toLeftOf="@+id/quarterThreeButton"
        android:background="@android:color/transparent"
        android:src="@drawable/quarter_round"/>

    <ImageView
        android:id="@+id/quarterThreeButton"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_below="@+id/quarterNumber"
        android:layout_toLeftOf="@+id/quarterFourButton"
        android:background="@android:color/transparent"
        android:src="@drawable/quarter_round"/>

    <ImageView
        android:id="@+id/quarterFourButton"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_below="@+id/quarterNumber"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:src="@drawable/quarter_round"/>

    <ImageView
        android:id="@+id/overtimeOneButton"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:padding="4.5dp"
        android:rotation="45"
        android:layout_below="@+id/quarterNumber"
        android:layout_toRightOf="@+id/quarterFourButton"
        android:background="@android:color/transparent"
        android:src="@drawable/quarter_diamond"/>

    <ImageView
        android:id="@+id/overtimeTwoButton"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:padding="4.5dp"
        android:rotation="45"
        android:layout_below="@+id/quarterNumber"
        android:layout_toRightOf="@+id/overtimeOneButton"
        android:background="@android:color/transparent"
        android:src="@drawable/quarter_diamond"/>

    <ImageView
        android:id="@+id/overtimeThreeButton"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:padding="4.5dp"
        android:rotation="45"
        android:layout_below="@+id/quarterNumber"
        android:layout_toRightOf="@+id/overtimeTwoButton"
        android:background="@android:color/transparent"
        android:src="@drawable/quarter_diamond"/>

    <ImageButton
        android:id="@+id/PrevGameButton"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:padding="18dp"
        android:layout_marginTop="-12dp"
        android:layout_alignTop="@+id/quarterNumber"
        android:layout_toLeftOf="@+id/quarterNumber"
        android:layout_toStartOf="@+id/ScoreButton"
        android:background="@android:color/transparent"
        android:src="@drawable/leftarrow"
        android:contentDescription="@string/left_arrow"
        android:tint="@android:color/darker_gray" />

    <ImageButton
        android:id="@+id/NextGameButton"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:padding="18dp"
        android:layout_marginTop="-12dp"
        android:layout_alignTop="@+id/quarterNumber"
        android:layout_toRightOf="@+id/quarterNumber"
        android:layout_toEndOf="@+id/ScoreButton"
        android:background="@android:color/transparent"
        android:src="@drawable/rightarrow"
        android:contentDescription="@string/right_arrow"
        android:tint="@android:color/darker_gray" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/PrevGameButton"
        android:textSize="13dp"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-medium"
        android:text="Home" />

    <Button
        android:id="@+id/completeButton"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/NextGameButton"
        android:textSize="13dp"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-medium"
        android:text="Summary" />

    <ImageView
        android:id="@+id/scoreImageView"
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:layout_below="@id/finishButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:src="@drawable/rectangle" />

    <TextView
        android:id="@+id/myTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/scoreImageView"
        android:layout_marginTop="25dp"
        android:textSize="26sp"
        android:layout_marginLeft="15dp"
        android:text="My Team"
        android:textStyle="normal"
        android:fontFamily="sans-serif-medium"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/opposingTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/scoreImageView"
        android:layout_alignRight="@id/scoreImageView"
        android:layout_marginTop="25dp"
        android:textSize="26sp"
        android:layout_marginRight="15dp"
        android:text="Opposing Team"
        android:textStyle="normal"
        android:fontFamily="sans-serif-medium"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/myTeamScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/myTeamName"
        android:layout_below="@+id/myTeamName"
        android:layout_marginStart="18dp"
        android:fontFamily="sans-serif-medium"
        android:shadowColor="#80000000"
        android:shadowDy="5"
        android:shadowRadius="20"
        android:text="50"
        android:textColor="#ffffff"
        android:textSize="60sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/opposingTeamScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/opposingTeamName"
        android:layout_below="@+id/opposingTeamName"
        android:layout_marginEnd="22dp"
        android:fontFamily="sans-serif-medium"
        android:shadowColor="#80000000"
        android:shadowDy="5"
        android:shadowRadius="20"
        android:text="46"
        android:textColor="#ffffff"
        android:textSize="60sp"
        android:textStyle="normal" />

    <View
        android:id="@+id/horizontal_bar"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="18dp"
        android:layout_below="@+id/scoreImageView"
        android:layout_centerHorizontal="true"
        android:background="#ffffff" />

    <!-- Buttons -->
    <Button
        android:id="@+id/ScoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/horizontal_bar"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/TurnoverButton"
        android:layout_alignRight="@+id/TurnoverButton"
        android:background="@drawable/roundbutton_main"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:fontFamily="sans-serif-medium"
        android:text="@string/score" />

    <Button
        android:id="@+id/MissButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ScoreButton"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/TurnoverButton"
        android:layout_alignRight="@+id/TurnoverButton"
        android:background="@drawable/roundbutton_red"
        android:layout_marginTop="18dp"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:fontFamily="sans-serif-medium"
        android:text="@string/miss" />

    <Button
        android:id="@+id/ReboundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MissButton"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/TurnoverButton"
        android:layout_alignRight="@+id/TurnoverButton"
        android:background="@drawable/roundbutton_main"
        android:layout_marginTop="18dp"
        android:textColor="#ffffff"
        android:fontFamily="sans-serif-medium"
        android:textSize="16sp"
        android:text="@string/rebound" />

    <Button
        android:id="@+id/FoulButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ReboundButton"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/TurnoverButton"
        android:layout_alignRight="@+id/TurnoverButton"
        android:background="@drawable/roundbutton_main"
        android:layout_marginTop="18dp"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:fontFamily="sans-serif-medium"
        android:text="@string/foul" />

    <Button
        android:id="@+id/TurnoverButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@+id/FoulButton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundbutton_main"
        android:layout_marginTop="18dp"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:fontFamily="sans-serif-medium"
        android:text="@string/turnover" />

    <Button
        android:id="@+id/PlayerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="#39a197"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:fontFamily="sans-serif-medium"
        android:text="@string/PlayerStats" />

    <!--this is the left vertical grey bar
    <View
        android:id="@+id/verticalBarLeft"
        android:layout_width="1dp"
        android:layout_height="200dp"
        android:layout_below="@+id/myTeamScore"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:background="#FF0000FF" />

    this is the right vertical grey bar
        android:id="@+id/verticalBarRight"
        android:layout_width="1dp"
        android:layout_height="200dp"
        android:layout_below="@+id/opposingTeamScore"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="370dp"
        android:background="#FF0000FF" />
    android:layout_alignRight="@+id/opposingTeamScore"-->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/horizontal_bar">
    <android.support.v7.widget.RecyclerView
        android:id="@+id/myTeam_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_below="@+id/horizontal_bar"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/ScoreButton" />
    </ScrollView>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/horizontal_bar">
    <android.support.v7.widget.RecyclerView
        android:id="@+id/opposingTeam_recycler_view"
        android:scrollbars="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="18dp"
        android:layout_below="@id/horizontal_bar"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/ScoreButton"
        android:textAlignment="textEnd"
        android:layout_gravity="end" />
    </ScrollView>



</RelativeLayout>


